# MSD-CPP

./: .clang-format  .clang-tidy  .gitignore  .mcp.json  CLAUDE.md  CMakeLists.txt  CMakeUserPresets.json  Doxyfile.in  build.cmake  conanfile.py  gtest_check.cmake  report.json  requirements.txt  sourcelist.cmake  test_geometry.db
docs/tutorials/expanding-polytope-algorithm/: CMakeLists.txt  README.md  example.cpp  presentation.html
docs/tutorials/inertia-tensor-convex-hull/: CMakeLists.txt  README.md  example.cpp  presentation.html
docs/tutorials/inertia-tensor-convex-hull/source_code/: volInt  volInt.c
docs/tutorials/lagrange-constraint-framework/: CMakeLists.txt  README.md  example.cpp  presentation.html
msd/msd-asset-gen/: CLAUDE.md  CMakeLists.txt
msd/msd-asset-gen/src/: CMakeLists.txt  generate_assets.cpp
msd/msd-assets/: CLAUDE.md  CMakeLists.txt
msd/msd-assets/src/: Asset.cpp  Asset.hpp  AssetRegistry.cpp  AssetRegistry.hpp  CMakeLists.txt  ConvexHull.cpp  ConvexHull.hpp  CoordinateTO.hpp  Geometry.cpp  Geometry.hpp  GeometryFactory.cpp  GeometryFactory.hpp  GeometryTO.hpp  GeometryTraits.hpp  STLLoader.cpp  STLLoader.hpp  VertexTO.hpp
msd/msd-assets/test/: CMakeLists.txt  GeometryDatabaseTest.cpp  GeometrySerializationTest.cpp
msd/msd-exe/: CLAUDE.md  CMakeLists.txt
msd/msd-exe/src/: main.cpp
msd/msd-gui/: CLAUDE.md  CMakeLists.txt
msd/msd-gui/src/: CMakeLists.txt  Camera3D.cpp  Camera3D.hpp  CameraController.cpp  CameraController.hpp  GPUInstanceManager.hpp  InputHandler.cpp  InputHandler.hpp  InputState.cpp  InputState.hpp  SDLApp.cpp  SDLApp.hpp  SDLGPUManager.cpp  SDLGPUManager.hpp  SDLUtils.cpp  SDLUtils.hpp  ShaderPolicy.cpp  ShaderPolicy.hpp  gui.cpp
msd/msd-gui/test/: CMakeLists.txt  ShaderTransformTest.cpp
msd/msd-gui/test/unit/: gpu_instance_manager_test.cpp  (+1 more)
msd/msd-pybind/: CLAUDE.md  CMakeLists.txt  README.md
msd/msd-pybind/src/: asset_registry_bindings.cpp  database_bindings.cpp  engine_bindings.cpp  geometry_bindings.cpp  msd_bindings.cpp  record_bindings.cpp
msd/msd-pybind/test/: test_engine_bindings.py  test_msd_reader.py
msd/msd-sim/: CLAUDE.md  CMakeLists.txt  architecture.puml
msd/msd-sim/bench/: CMakeLists.txt  CollisionPipelineBench.cpp  ConvexHullBench.cpp  DataRecorderBench.cpp  FrictionBenchmark.cpp  GJKBench.cpp  MultiBodyCollisionBench.cpp  MultiBodyScenarios.hpp
msd/msd-sim/examples/: stl_loader_example.cpp
msd/msd-sim/src/: CMakeLists.txt  Engine.cpp  Engine.hpp
msd/msd-sim/test/: CMakeLists.txt  EngineIntegrationTest.cpp
msd/msd-transfer/: CLAUDE.md  CMakeLists.txt  README.md
msd/msd-transfer/src/: AccelerationRecord.hpp  AngularAccelerationRecord.hpp  AngularCoordinateRecord.hpp  AngularRateRecord.hpp  AngularVelocityRecord.hpp  AppliedForceRecord.hpp  AssetDynamicStateRecord.hpp  AssetInertialStaticRecord.hpp  AssetPhysicalDynamicRecord.hpp  AssetPhysicalStaticRecord.hpp  BodyMetadataRecord.hpp  CollisionHullRecord.hpp  CollisionResultRecord.hpp  ConstraintForceRecord.hpp  ConstraintRecordVisitor.hpp  ContactConstraintRecord.hpp  ContactPointRecord.hpp  ContactRecord.hpp  CoordinateRecord.hpp  EnergyRecord.hpp  ExternalForceRecord.hpp  ForceVectorRecord.hpp  FrictionConstraintRecord.hpp  InertialStateRecord.hpp  MaterialRecord.hpp  MeshRecord.hpp  PhysicsTemplateRecord.hpp  QuaternionDRecord.hpp  Records.hpp  SimulationFrameRecord.hpp  SolverDiagnosticRecord.hpp  SystemEnergyRecord.hpp  TorqueVectorRecord.hpp  UnifiedContactConstraintRecord.hpp  Vector3DRecord.hpp  Vector4DRecord.hpp  VelocityRecord.hpp
msd/msd-utils/: CLAUDE.md  CMakeLists.txt
msd/msd-utils/src/: CMakeLists.txt  PathUtils.cpp  PathUtils.hpp
msd/msd-utils/test/: CMakeLists.txt  test_PathUtils.cpp
prototypes/0022_gjk_asset_physical_transform/p1_transform_validation/: CMakeLists.txt  README.md  main.cpp
prototypes/0022_gjk_asset_physical_transform/p2_performance_overhead/: CMakeLists.txt  README.md  main.cpp
prototypes/0024_angular_coordinate/: CMakeLists.txt  p1_normalization_performance.cpp  p1b_lazy_optimization.cpp  p1c_hybrid_eager.cpp  p1d_deferred_writeback.cpp  p1e_complete_coverage.cpp  p2_internal_storage.cpp  p3_numerical_stability.cpp  p4_eigen_integration.cpp  p5_shared_interface.cpp
prototypes/0027a_expanding_polytope_algorithm/p1_convergence/: CMakeLists.txt  README.md  epa.cpp  epa.hpp  main.cpp  main_v2.cpp
prototypes/0027a_expanding_polytope_algorithm/p2_horizon/: CMakeLists.txt  README.md  main.cpp
replay/: README.md  pyproject.toml  start_server.sh
replay/examples/: query_recording.py
replay/mcp_server/: __init__.py  __main__.py  server.py
replay/msd_replay.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
replay/recordings/: test_cube_drop.db-journal
replay/replay/: __init__.py  app.py  config.py  generated_models.py  models.py
replay/replay/routes/: __init__.py  assets.py  frames.py  live.py  simulations.py
replay/replay/services/: __init__.py  geometry_service.py  simulation_service.py
replay/replay/testing/: __init__.py  assertions.py  conftest.py  recording_query.py
replay/static/: index.html  live.html
replay/static/css/: live.css  style.css
replay/static/js/: app.js  data.js  live-app.js  playback.js  scene.js  ui.js
replay/tests/: __init__.py  test_api.py  test_assertions.py  test_collision_recording.py  test_drop_recording 2.py  test_drop_recording.py  test_live_api.py  test_recording_query.py
replay/tools/: CMakeLists.txt  generate_multibody_recording.cpp  generate_test_assets.cpp  generate_test_recording.cpp
src/msd-db/: CMakeLists.txt
src/msd-db/include/: Database.hpp  schema.hpp
src/msd-db/src/: CMakeLists.txt  DataAccessObject.hpp  Database.cpp  Database.hpp
src/msd-db/test/: BaseTransferObject.cpp  CMakeLists.txt  DatabaseTest.cpp  exampleTest.cpp
src/msd-exe/: CMakeLists.txt  gpt-prompt  main.cpp
src/msd-exe/src/: CMakeLists.txt  main.cpp
src/msd-gui/: CMakeLists.txt
src/msd-gui/src/: gui.cpp
src/msd-sim/: CMakeLists.txt  Engine.cpp  Engine.hpp  msd-sim.cpp  msd-sim.hpp
test/: CMakeLists.txt
test/msd-sim/: test-msd-sim.cpp
(+1312 files in other folders)
