# Ticket: 0056d_fastapi_backend

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "msd-replay"
version = "0.1.0"
description = "FastAPI backend for MSD simulation replay visualization"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "pydantic>=2.0",
    "mcp>=1.0",  # MCP SDK for physics debugging server (Ticket: 0063_replay_mcp_server)
    "numpy>=1.24",  # Vector math for validation tools (Ticket: 0063_replay_mcp_server)
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "httpx>=0.24",  # For TestClient
]

[tool.setuptools.packages.find]
where = ["."]
include = ["replay*"]
